# Devgeini

./: Cargo.toml  Dockerfile  Readme.md  setup.ps1  setup.sh
.github/workflows/: release.yml
src/: main.rs
src/config/: structure.rs
src/templates/: backend.rs  frontend.rs
src/utils/: createfiles.rs  createproject.rs  mod.rs  projecttype.rs
