[package]
name = "devgeini"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
indicatif = "0.17"

reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
